[gd_scene load_steps=11 format=3 uid="uid://bfq6botvcchfn"]

[ext_resource type="Script" path="res://scripts/card.gd" id="1_xaty7"]
[ext_resource type="Texture2D" uid="uid://3gkeyqa4sd7m" path="res://assets/card_back.png" id="3_pe3tw"]
[ext_resource type="Material" uid="uid://c1jjie1qpb5vk" path="res://card/card.tres" id="3_pmfv5"]
[ext_resource type="Texture2D" uid="uid://bvguxvu67b2t8" path="res://assets/sample_card.png" id="4_2de7e"]
[ext_resource type="Texture2D" uid="uid://d2w3badc771v4" path="res://icon.svg" id="5_14md3"]
[ext_resource type="Material" uid="uid://k32sd6nhjg0c" path="res://card/perspective.tres" id="6_2fkq2"]
[ext_resource type="Shader" path="res://card/perspective.gdshader" id="7_dmn8n"]

[sub_resource type="ViewportTexture" id="ViewportTexture_bwk7b"]
viewport_path = NodePath("SubViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_n2wlh"]
shader = ExtResource("7_dmn8n")
shader_parameter/fov = 30.0
shader_parameter/cull_back = true
shader_parameter/y_rot = -115.0
shader_parameter/x_rot = 0.0
shader_parameter/inset = 0.0

[sub_resource type="ViewportTexture" id="ViewportTexture_k8q1j"]
viewport_path = NodePath("SubViewport2")

[node name="Card" type="Container"]
custom_minimum_size = Vector2(100, 100)
offset_right = 100.0
offset_bottom = 100.0
scale = Vector2(0.2, 0.2)
script = ExtResource("1_xaty7")

[node name="SubViewport2" type="SubViewport" parent="."]
size = Vector2i(350, 610)

[node name="CardBack" type="Sprite2D" parent="SubViewport2"]
material = ExtResource("3_pmfv5")
position = Vector2(175, 305)
texture = ExtResource("3_pe3tw")

[node name="SubViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(350, 610)

[node name="CardFront2" type="Sprite2D" parent="SubViewport"]
material = ExtResource("3_pmfv5")
position = Vector2(175, 305)
texture = ExtResource("4_2de7e")

[node name="Sprite2D" type="Sprite2D" parent="SubViewport/CardFront2"]
position = Vector2(135, 103)
scale = Vector2(0.335938, 0.335938)
texture = ExtResource("5_14md3")

[node name="Label" type="Label" parent="SubViewport/CardFront2"]
offset_left = 3.0
offset_top = 142.0
offset_right = 122.0
offset_bottom = 165.0
text = "This is my Hero"

[node name="CardFront" type="TextureRect" parent="."]
material = ExtResource("6_2fkq2")
layout_mode = 2
texture = SubResource("ViewportTexture_bwk7b")
expand_mode = 1

[node name="CardBack" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_n2wlh")
layout_mode = 2
texture = SubResource("ViewportTexture_k8q1j")
expand_mode = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
